# gpmdi_hack

./: README.md  extract_fragment_from_audio.py  get_emotions.py
hack/: Dockerfile  Makefile  []0  docker-compose.yaml  environment.yml  pyproject.toml  whisper.pkl
hack/hack/: main.py
hack/hack/pages/: search.py  Видео_точек.py  Поиск_по_фото.py
hack/hack/utils/: clips.py  emotional_extractor.py  foo.py  lemm.py  morph.py  person_clustering.py  photo_search.py  text_tone.py  wav_chunks.py  whisper.py  whisper_service.py  yolo_service.py
hack/notebooks/: final cutter.ipynb  final_clustring.ipynb  scene_info.ipynb  search_img_on_vodeo.ipynb
