[project]
name = "hack"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Artem216", email = "artemtsykanov22@gmail.com"},
]
dependencies = [
    "cookiecutter-data-science>=2.0.0",
    "moviepy>=1.0.3",
    "pandas>=2.2.3",
    "openai-whisper>=20231117",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
