[project]
name = "hack"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Artem216", email = "artemtsykanov22@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "pydub>=0.25.1",
    "transformers>=4.45.1",
    "torchaudio>=2.4.1",
    "moviepy>=1.0.3",
    "openai-whisper>=20230306",
    "ultralytics>=8.2.102",
    "streamlit>=1.38.0",
    "numba>=0.60.0",
    "scipy>=1.14.1",
    "sentence-transformers>=3.1.1",
    "pymorphy3>=2.0.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
